test/corpus/request.txt
=====================
Request to localhost
=====================

GET http://localhost:3000/api/v1/users/all

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


============================
Request to a random website
============================

GET https://neorg.org/

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


========================
Request with parameters
========================

GET https://reqres.in/api/users?page=5

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


======================================
Request parameters with extra symbols
======================================

GET https://localhost:3000/api?id[]=1&id[]=2&email=foo@bar.com&statement=2+2=4

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


======================================
Request parameters without value
======================================

GET https://localhost:3000/api?page[number]=3&fields[available]&available

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


======================================
Request parameters without value and trailing =
======================================

GET https://localhost:3000/api?page[number]=3&fields[available]=&available=

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))

=================
Request fragment
=================

GET https://github.com/rest-nvim/tree-sitter-http?tab=readme-ov-file#how-to-contribute

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))

=================
Named request
=================
### A First Request
GET https://example.com/

###
# @name=A Second Request
GET https://example.com/

### not a request name
###
# @name A Third Request
GET https://example.com/

---

(document
  (section
    (request_separator
      value: (value))
    request: (request
      method: (method)
      url: (target_url)))
  (section
    (request_separator)
    (comment
      name: (identifier)
      value: (value))
    request: (request
      method: (method)
      url: (target_url)))
  (section
    (request_separator
      value: (value)))
  (section
    (request_separator)
    (comment
      name: (identifier)
      value: (value))
    request: (request
      method: (method)
      url: (target_url))))

============================================
Request to localhost with title and metadata
============================================
### Request to localhost
# @name requestLH
# @ref another-request
# @loop for ids of some_ids

GET http://localhost:3000/api/v1/users/all

---

(document
  (section
    (request_separator
      value: (value))
    (comment
      name: (identifier)
      value: (value))
    (comment
      name: (identifier)
      value: (value))
    (comment
      name: (identifier)
      value: (value))
    request: (request
      method: (method)
    url: (target_url))))
