test/corpus/scripts.txt
===================
Post request script
===================
PUT https://reqres.in/api/users/2
Content-Type: application/json

{
    "name": "morpheus",
    "job": "zion resident"
}

{{
  console.log("yes");
}}

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url)
    header: (header
      name: (header_entity)
      value: (value))
    body: (json_body))))
